manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
  name: bepm.io
  namespace: default
spec:
  rules:
    - host: bepm.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: cloudflare-k8s-tls
                port:
                  number: 80
  tls:
    # specifying a host in the TLS section will tell cert-manager what
    # DNS SANs should be on the created certificate.
    - hosts:
        - bepm.io
      # cert-manager will create this secret
      secretName: bepm-io-tls
